<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="konyan.net.nyanportfolioapp.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/HeaderText"
        />

    <Button
        android:id="@+id/bt_main_popular_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:layout_below="@+id/tv_main_header"
        android:layout_alignRight="@+id/tv_main_header"
        android:layout_alignEnd="@+id/tv_main_header"
        android:layout_alignLeft="@+id/tv_main_header"
        android:layout_alignStart="@+id/tv_main_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/MenuButton"
        android:onClick="actionPopularMovies"
        />

    <Button
        android:id="@+id/bt_main_stock_hawk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:layout_below="@+id/bt_main_popular_movies"
        android:layout_alignRight="@+id/tv_main_header"
        android:layout_alignEnd="@+id/tv_main_header"
        android:layout_alignLeft="@+id/tv_main_header"
        android:layout_alignStart="@+id/tv_main_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/MenuButton"
        android:onClick="actionStockHawk"/>

    <Button
        android:id="@+id/bt_main_build_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:layout_below="@+id/bt_main_stock_hawk"
        android:layout_alignRight="@+id/tv_main_header"
        android:layout_alignEnd="@+id/tv_main_header"
        android:layout_alignLeft="@+id/tv_main_header"
        android:layout_alignStart="@+id/tv_main_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/MenuButton"
        android:onClick="actionBuildItBigger"/>

    <Button
        android:id="@+id/bt_main_make_app_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:layout_below="@+id/bt_main_build_it"
        android:layout_alignRight="@+id/tv_main_header"
        android:layout_alignEnd="@+id/tv_main_header"
        android:layout_alignLeft="@+id/tv_main_header"
        android:layout_alignStart="@+id/tv_main_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/MenuButton"
        android:onClick="actionMakeMaterial"/>

    <Button
        android:id="@+id/bt_main_go_ubiquitous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:layout_below="@+id/bt_main_make_app_material"
        android:layout_alignRight="@+id/tv_main_header"
        android:layout_alignEnd="@+id/tv_main_header"
        android:layout_alignLeft="@+id/tv_main_header"
        android:layout_alignStart="@+id/tv_main_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/MenuButton"
        android:onClick="actionGoUbiquitous"/>

    <Button
        android:id="@+id/bt_main_capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own"
        android:layout_below="@+id/bt_main_go_ubiquitous"
        android:layout_alignRight="@+id/tv_main_header"
        android:layout_alignEnd="@+id/tv_main_header"
        android:layout_alignLeft="@+id/tv_main_header"
        android:layout_alignStart="@+id/tv_main_header"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/MenuButton"
        android:onClick="actionCapstone"/>
    </RelativeLayout>

</ScrollView>
